--- a/dtas-2/.godot/editor/editor_layout.cfg
+++ b/dtas-2/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/state.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/World.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/player.tscn"
+current_scene="res://scenes/World.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/HUD.gd", "res://scripts/playerController.gd", "res://scripts/state.gd"]
-selected_script="res://scripts/state.gd"
+open_scripts=["res://scripts/debug_panel.gd", "res://scripts/Global.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/playerController.gd", "res://scripts/reticle.gd", "res://scripts/state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
+selected_script="res://scripts/debug_panel.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 211, 1164, 695)
+floating_window_rect=Rect2i(378, 151, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
