--- a/dtas-2/.godot/global_script_class_cache.cfg
+++ b/dtas-2/.godot/global_script_class_cache.cfg
@@ -1,4 +1,12 @@
 list=[{
+"base": &"State",
+"class": &"IdlePlayerState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/States/idle_player_state.gd"
+}, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
@@ -6,4 +14,20 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://scripts/state.gd"
+}, {
+"base": &"Node",
+"class": &"TheMimic",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/the_mimic.gd"
+}, {
+"base": &"State",
+"class": &"WalkingPlayerState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/States/walking_player_state.gd"
 }]
