Working on slide

--- a/dtas-2/.godot/global_script_class_cache.cfg
+++ b/dtas-2/.godot/global_script_class_cache.cfg
@@ -7,6 +7,30 @@ list=[{
 "language": &"GDScript",
 "path": "res://scripts/States/idle_player_state.gd"
 }, {
+"base": &"CharacterBody3D",
+"class": &"Player",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/playerController.gd"
+}, {
+"base": &"State",
+"class": &"PlayerMovementState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/States/player_movement_state.gd"
+}, {
+"base": &"State",
+"class": &"SlidingPlayerState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/sliding_player_state.gd"
+}, {
 "base": &"Node",
 "class": &"State",
 "icon": "",
