--- a/dtas-2/.godot/editor/editor_layout.cfg
+++ b/dtas-2/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/States/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/States/", "res://scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/debug_panel.gd", "res://scripts/Global.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/playerController.gd", "res://scripts/reticle.gd", "res://scripts/state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
-selected_script="res://scripts/debug_panel.gd"
+open_scripts=["res://scripts/debug_panel.gd", "res://scripts/Global.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/playerController.gd", "res://scripts/States/player_movement_state.gd", "res://scripts/reticle.gd", "res://scripts/sliding_player_state.gd", "res://scripts/state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
+selected_script="res://scripts/playerController.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
