--- a/dtas-2/.godot/global_script_class_cache.cfg
+++ b/dtas-2/.godot/global_script_class_cache.cfg
@@ -1,5 +1,13 @@
 list=[{
-"base": &"State",
+"base": &"PlayerMovementState",
+"class": &"CrouchingPlayerState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/States/crouching_player_state.gd"
+}, {
+"base": &"PlayerMovementState",
 "class": &"IdlePlayerState",
 "icon": "",
 "is_abstract": false,
@@ -23,13 +31,13 @@ list=[{
 "language": &"GDScript",
 "path": "res://scripts/States/player_movement_state.gd"
 }, {
-"base": &"State",
-"class": &"SlidingPlayerState",
+"base": &"PlayerMovementState",
+"class": &"SprintingPlayerState",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://scripts/sliding_player_state.gd"
+"path": "res://scripts/States/sprinting_player_state.gd"
 }, {
 "base": &"Node",
 "class": &"State",
@@ -47,7 +55,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://scripts/the_mimic.gd"
 }, {
-"base": &"State",
+"base": &"PlayerMovementState",
 "class": &"WalkingPlayerState",
 "icon": "",
 "is_abstract": false,
