--- a/dtas-2/.godot/editor/editor_layout.cfg
+++ b/dtas-2/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/the_mimic.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/playerController.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/States/", "res://scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/World.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/World.tscn"
+current_scene="res://scenes/player.tscn"
 center_split_offset=-273
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/States/crouching_player_state.gd", "res://scripts/debug_panel.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/playerController.gd", "res://scripts/States/player_movement_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
-selected_script="res://scripts/States/idle_player_state.gd"
+open_scripts=["res://scripts/States/crouching_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/playerController.gd", "res://scripts/States/player_movement_state.gd", "res://scripts/States/sliding_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
+selected_script="res://scripts/States/sliding_player_state.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
