--- a/dtas-2/.godot/global_script_class_cache.cfg
+++ b/dtas-2/.godot/global_script_class_cache.cfg
@@ -32,6 +32,14 @@ list=[{
 "path": "res://scripts/States/player_movement_state.gd"
 }, {
 "base": &"PlayerMovementState",
+"class": &"SlidingPlayerState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/States/sliding_player_state.gd"
+}, {
+"base": &"PlayerMovementState",
 "class": &"SprintingPlayerState",
 "icon": "",
 "is_abstract": false,
