--- a/dtas-2/.godot/global_script_class_cache.cfg
+++ b/dtas-2/.godot/global_script_class_cache.cfg
@@ -15,6 +15,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://scripts/States/idle_player_state.gd"
 }, {
+"base": &"PlayerMovementState",
+"class": &"JumpingPlayerState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/States/jumping_player_state.gd"
+}, {
 "base": &"CharacterBody3D",
 "class": &"Player",
 "icon": "",
