--- a/dtas-2/.godot/editor/editor_layout.cfg
+++ b/dtas-2/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_closed=[]
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=300
 dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/World.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/player.tscn"
+current_scene="res://scenes/World.tscn"
 center_split_offset=-273
-selected_default_debugger_tab_idx=1
-selected_main_editor_idx=1
-selected_bottom_panel_item=4
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/States/crouching_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/playerController.gd", "res://scripts/States/player_movement_state.gd", "res://scripts/States/sliding_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
-selected_script="res://scripts/States/sliding_player_state.gd"
+open_scripts=["res://scripts/States/crouching_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/States/jumping_player_state.gd", "res://scripts/playerController.gd", "res://scripts/States/player_movement_state.gd", "res://scripts/States/sliding_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
+selected_script="res://scripts/States/walking_player_state.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
