--- a/dtas-2/.godot/editor/editor_layout.cfg
+++ b/dtas-2/.godot/editor/editor_layout.cfg
@@ -29,11 +29,11 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/World.tscn", "res://scenes/player.tscn")
-current_scene="res://scenes/World.tscn"
+current_scene="res://scenes/player.tscn"
 center_split_offset=-273
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=1
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
@@ -44,7 +44,7 @@ position=Vector2i(0, 23)
 [ScriptEditor]
 
 open_scripts=["res://scripts/States/crouching_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/States/jumping_player_state.gd", "res://scripts/playerController.gd", "res://scripts/States/player_movement_state.gd", "res://scripts/States/sliding_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
-selected_script="res://scripts/States/walking_player_state.gd"
+selected_script="res://scripts/States/sliding_player_state.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(378, 151, 1164, 695)
+floating_window_rect=Rect2i(378, 211, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
