--- a/dtas-2/.godot/editor/project_metadata.cfg
+++ b/dtas-2/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
+executable_path="C:/Users/26siggaxanc/Documents/Godot_v4.4.1-stable_win64.exe/Godot_v4.4.1-stable_win64.exe"
 use_advanced_connections=false
 show_compatible_methods_only=true
 show_script_methods_only=true
