--- a/dtas-2/.godot/editor/editor_layout.cfg
+++ b/dtas-2/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scripts/playerController.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/States/", "res://scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/Models/Weapons/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/Models/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=300
-dock_hsplit_3=-270
+dock_hsplit_3=-316
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://scenes/World.tscn", "res://scenes/player.ts
 current_scene="res://scenes/World.tscn"
 center_split_offset=-273
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -43,7 +43,7 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/States/crouching_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/States/jumping_player_state.gd", "res://scripts/playerController.gd", "res://scripts/States/player_movement_state.gd", "res://scripts/States/sliding_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/the_mimic.gd", "res://scripts/States/walking_player_state.gd"]
+open_scripts=["res://scripts/States/falling_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/States/jumping_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/States/walking_player_state.gd"]
 selected_script="res://scripts/States/jumping_player_state.gd"
 open_help=[]
 script_split_offset=200
