--- a/dtas-2/.godot/global_script_class_cache.cfg
+++ b/dtas-2/.godot/global_script_class_cache.cfg
@@ -8,6 +8,14 @@ list=[{
 "path": "res://scripts/States/crouching_player_state.gd"
 }, {
 "base": &"PlayerMovementState",
+"class": &"FallingPlayerState",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/States/falling_player_state.gd"
+}, {
+"base": &"PlayerMovementState",
 "class": &"IdlePlayerState",
 "icon": "",
 "is_abstract": false,
