--- a/dtas-2/.godot/editor/editor_layout.cfg
+++ b/dtas-2/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/Models/Weapons/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/Models/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/Models/Weapons/Sword/sword.res")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/Models/", "res://assets/Models/Weapons/", "res://assets/Models/Weapons/Sword/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/World.tscn", "res://scenes/player.tscn")
+open_scenes=PackedStringArray("res://scenes/World.tscn", "res://scenes/player.tscn", "res://assets/Models/Weapons/Sword/sword.tscn")
 current_scene="res://scenes/World.tscn"
 center_split_offset=-273
 selected_default_debugger_tab_idx=0
@@ -43,8 +43,8 @@ position=Vector2i(0, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/States/falling_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/States/jumping_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/States/walking_player_state.gd"]
-selected_script="res://scripts/States/jumping_player_state.gd"
+open_scripts=["res://scripts/States/falling_player_state.gd", "res://scripts/States/idle_player_state.gd", "res://scripts/States/jumping_player_state.gd", "res://scripts/States/sprinting_player_state.gd", "res://scripts/sub_viewport.gd", "res://scripts/States/walking_player_state.gd", "res://scripts/weapon_camera.gd"]
+selected_script="res://scripts/weapon_camera.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
@@ -57,7 +57,7 @@ floating_window_screen=0
 
 [ShaderEditor]
 
-open_shaders=[]
+open_shaders=["res://assets/Models/Weapons/Sword/sword.res::Shader_45a6u", "res://assets/Models/Weapons/Sword/sword.res::Shader_1abkm"]
 split_offset=200
-selected_shader=""
+selected_shader="res://assets/Models/Weapons/Sword/sword.res::Shader_1abkm"
 text_shader_zoom_factor=1.0
